# forge-sdk

./: .gitignore  ADVERSARIAL-REPORT.md  ATTACK-RESULTS.json  CHANGELOG.md  CORE-PORTABILITY.md  Cargo.toml  DEEP-ANALYSIS.md  FORGE-ASSESSMENT.md  FRONTIER-COMPARISON.md  LICENSE  PLAYBOOK.md  QUALITY.md  README.md  RESEARCH-LOG-FORGE-001.md  SELF-TEST-REPORT.md  TEST-RESULTS.md  VISION-WORLD-RESEARCH.md  attack_deepseek.py  forge-sdk.okf.yaml  hardening.py  pyproject.toml  test_agent_on_lgwks.py  test_ai_review.py  test_human_review.py
.firecrawl/: anthropic-claude-code.json  benchmarks.json  continue-reranker.json  e2b-sandbox.json  google-adk.json  langgraph.json  openai-agents.json  pydantic-ai.json
.github/workflows/: ci.yml
.specs/: SPEC-SDK-001.md  SPEC-SDK-002-lgwks-integration.md  SPEC-SDK-003-failure-taxonomy-countermeasures.md  lgwks-integration-map.mmd
docs/: ADVERSARIAL_HARDENING_PROOF.md  CHANGE_ORDER_MAP.md  CLAUDE-REVIEW.md  CLAUDE_REVIEW_MESSAGE.md  FORGE-EXPERIENCE-SPEC.md  FORGE-PULSE-AUTO-DOCS.md  FORGE-RUST-PORT-GAP.md  FORGE-RUST-TUI-SPEC.md  IMPLEMENTATION_PLAYBOOK.md  NEXT-FOR-CLINE.md  POST-74-DEEP-PLAYBOOKS.md  PYTHON-RUST-PARITY-LEDGER.md  REFACTORED-PLAN-COMPLETE.md  SEMANTIC-RESEARCH-FRONTIER-CLIS.md  TOPOLOGICAL_MAP.md
docs/implementation-specs/: README.md  session-a-runtime-split.md  session-b-field-test-receipts.md  session-c-brain-payload-v0.md
docs/playbooks/: 001-product-thesis.md  002-rust-repo-driving-harness.md  003-sdk-harness-agent-split.md  004-brain-topological-payload.md  005-runtime-ux-control-surface.md  006-evals-field-tests.md  007-pulse-auto-documentation-brain.md
examples/: basic.py  harness_v5.py
forge-brain/: Cargo.toml
forge-brain/src/: lib.rs  okf_adapter.rs  payload.rs  semantic_adapter.rs  steering.rs
forge-cli/: Cargo.toml
forge-cli/src/: main.rs  render.rs  tools.rs
forge-cli/src/commands/: audit.rs  doctor.rs  mod.rs  run.rs  session.rs
forge-cli/src/tools/: gated_mutation.rs  grep.rs  mod.rs  safe_read.rs
forge-core/: Cargo.toml
forge-core-security/: Cargo.toml
forge-core-security/src/: containment.rs  lib.rs  sandbox.rs
forge-core/src/: agent.rs  audit.rs  config.rs  context.rs  doctor.rs  event.rs  experience.rs  guard.rs  lib.rs  okf.rs  permission.rs  port.rs  renderer.rs  result.rs  router.rs  semantic.rs  session.rs  step.rs  tracer.rs  verifier.rs
forge-core/tests/: integration.rs
forge-evals/: Cargo.toml
forge-evals/src/: harbor.rs  lib.rs
forge-evals/src/fixtures/: mod.rs
forge-harness/: Cargo.toml
forge-harness/src/: brain.rs  builder.rs  lib.rs
forge-harness/src/aci/: mod.rs  tools.rs
forge-providers/: Cargo.toml
forge-providers/src/: deepseek.rs
forge-tui/: Cargo.toml
forge-tui/src/: main.rs
specs/: AUDIT-MATRIX-001-security-quality.md  SPEC-SECURITY-002-injection-containment-redesign.md  SPEC-SECURITY-003-rust-core-compile-time-containment.md  SPEC-V5-001-self-improving-agent-culture.md
specs/_audit_repros/: README.md  repro_a_injection_survival.py  repro_b_knowledge_id_collision.py  repro_c_gate_bypass.py
src/forge_sdk/: __init__.py  __main__.py  security.py  text_tokens.py
src/forge_sdk/agents/: __init__.py  events.py  react.py  types.py
src/forge_sdk/audit/: __init__.py  daemon_sink.py  eventsink.py
src/forge_sdk/cli/: ansi.py  doctor.py  main.py  permissions.py  renderers.py  session.py
src/forge_sdk/config/: __init__.py
src/forge_sdk/eval/: __init__.py  harness.py  runner.py  strategy.py
src/forge_sdk/harness/: __init__.py  adaptive.py  engine.py  gate.py  learning.py  profiles.py  runner.py
src/forge_sdk/models/: __init__.py  deepseek.py  mesh.py  ollama.py  openrouter.py  port.py  registry.py  types.py  vertex.py
src/forge_sdk/tools/: __init__.py  adapters.py  filesystem.py  registry.py  search.py  shell.py  types.py
src/forge_sdk/tools/advanced/: __init__.py  code_intel.py  edit_intel.py  knowledge_intel.py  (+2 more)
src/forge_sdk/tracing/: __init__.py  span.py  tracer.py
src/forge_sdk/verifiers/: __init__.py
src/forge_v2/agent_loop/: loop_guard.py  react.py
src/forge_v2/agents/: types.py
src/forge_v2/events/: __init__.py
src/forge_v2/memory/: __init__.py
src/forge_v2/policy/: __init__.py
src/forge_v2/verifiers/: __init__.py
tests/: test_adapters.py  test_cli_trace_cwd.py  test_edit_intel.py  test_filesystem.py  test_models_vertex.py  test_named_target_coverage.py  test_native_tool_calling.py  test_none_content_response.py  test_parse_control_chars.py  test_parse_failure_retry.py  test_phantom_edit_from_blocked_command.py  test_react_cwd.py  test_security_containment.py  test_security_path_command.py  test_security_temp_dir.py  test_shell_compound_commands.py  test_smoke.py  test_task_implies_edits.py  test_verification_pipeline.py  test_verify_gate.py
tests/harness/: test_engine.py  test_gate.py  test_runner.py
