[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-sdk"
version = "0.1.0"
description = "Agent-agnostic SDK for building, observing, and evaluating AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "srinji" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]
eval = [
    "datasets>=3.0",
]

[project.scripts]
forge = "forge_sdk.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forge_sdk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
