[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-sdk"
version = "0.5.0"
description = "Agent-agnostic SDK for AI coding agents. v0.5: world-class tool suite (27 tools), v5 harness, convergence hotfix. Markov puzzle paradigm — LLM reasons, tools do the lifting."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "srinji" }]
keywords = ["ai", "coding-agent", "llm", "evaluation", "harness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]
eval = [
    "datasets>=3.0",
]

[project.scripts]
forge = "forge_sdk.cli.main:main"

[project.urls]
Homepage = "https://github.com/srinji-kaggss/forge-sdk"
Repository = "https://github.com/srinji-kaggss/forge-sdk"
Issues = "https://github.com/srinji-kaggss/forge-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/forge_sdk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
