[package]
name = "forge-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
forge-core = { path = "../forge-core" }
forge-core-security = { path = "../forge-core-security" }
forge-providers = { path = "../forge-providers" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "process"] }
serde_json = "1"
dirs = "5"
