[package]
name = "forge-core-security"
version = "0.1.0"
edition = "2021"

[dependencies]
# ⚠️ Versions verified live against crates.io 2026-07-01 — do not bump blindly
cap-std = "4"           # Bytecode Alliance capability filesystem (real max: 4.0.2)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
untrusted_value = "0.3" # compile-time taint newtype (real max: 0.3.2)
