[package]
name = "forge-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
forge-core-security = { path = "../forge-core-security" }

[dev-dependencies]
tokio-test = "0.4"
