[package]
name = "forge-evals"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-core = { path = "../forge-core" }
forge-harness = { path = "../forge-harness" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
thiserror = "2"
