[package]
name = "forge-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
forge-core = { path = "../forge-core" }
forge-core-security = { path = "../forge-core-security" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
thiserror = "2"
