[package]
name = "forge-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-core = { path = "../forge-core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
dotenvy = "0.15"
